correct columns alignment with clearfix

--- a/src/assets/stylesheet/extendsMain.css
+++ b/src/assets/stylesheet/extendsMain.css
@@ -1,6 +1,6 @@
 
 .bg-article-1 {
-    background: url(../images/articles/ujev_2018.jpg) no-repeat center center;
+    background: url(../images/articles/banda_maravilha.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -10,7 +10,7 @@
 }
 
 .bg-article-2 {
-    background: url(../images/articles/banda_maravilha.jpg) no-repeat center center;
+    background: url(../images/articles/eddyvents.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -20,7 +20,7 @@
 }
 
 .bg-article-3 {
-    background: url(../images/articles/lady_diana_es_lizete.jpg) no-repeat center center;
+    background: url(../images/articles/ujev_2018.jpg) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
